--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,8 @@
     ],
     "rules": {
         "no-tabs": ["error", {"allowIndentationTabs": true}],
-        "indent": ["error", "tab"]
+        "indent": ["error", "tab"],
+        "react/jsx-indent": [2, "tab"],
+        "react/jsx-indent-props": [2, "tab"]
     }
 }
