--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "no-tabs": ["error", {"allowIndentationTabs": true}],
         "indent": ["error", "tab"],
         "react/jsx-indent": [2, "tab"],
-        "react/jsx-indent-props": [2, "tab"]
+        "react/jsx-indent-props": [2, "tab"],
+        "max-len": ["error", { "code": 80 }]
     }
 }
