--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "indent": ["error", "tab"],
         "react/jsx-indent": [2, "tab"],
         "react/jsx-indent-props": [2, "tab"],
-        "max-len": ["error", { "code": 80 }]
+        "max-len": ["error", { "code": 80 }],
+        "brace-style": ["error", "stroustrup"]
     }
 }
