--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,9 +25,10 @@
     "rules": {
         "no-tabs": ["error", {"allowIndentationTabs": true}],
         "indent": ["error", "tab"],
+        "max-len": ["error", { "code": 80 }],
+        "brace-style": ["error", "allman"],
         "react/jsx-indent": [2, "tab"],
         "react/jsx-indent-props": [2, "tab"],
-        "max-len": ["error", { "code": 80 }],
-        "brace-style": ["error", "allman"]
+        "react/static-property-placement": ["error", "static public field"]
     }
 }
