--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
   }
